2007-06-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in the folder factory

2007-06-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* The folder type of the INBOX of a POP account
	* Folder lists when offline
	* Connecting, reconnecting and setting account settings while
	connecting (experimental)
	* Setting the username while asking the password is happening

2007-06-21  Sergio Villar Senin  <svillar@igalia.com>
	
	* libtinymail/tny-simple-list.c:
	(tny_simple_list_remove): do not free the item unless it was
	previously found in the list

2007-06-21  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Changes how set_flags function was used on get_full and
	get_partial messages methods.
	
2007-06-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Error handling: No space left on device, when retrieving messages
	* Flag handling after message retrieval
	* Local and remove size calculations
	* Bandwidth optimization for LIST
	* Introduction of TnyCamelPopRemoteMsgRemoveStrategy

	* This was a major API change

2007-06-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a bug in tny_folder_transfer_msgs
	* Removed some memory problems
	* Unsolicted FETCH responses while getting messages using BINARY and
	FETCH

2007-06-19  Philip Van Hoof  <pvanhoof@gnome.org>

	* The connection_status_changed signal got extended a little bit

	* This was a major API change

2007-06-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-msg-header:
	(tny_camel_msg_header_get_flags): added implementation
	that obtains the priority flags using the headers
	we set in our set/unset methods.
	(tny_camel_msg_header_set_flags, tny_camel_msg_header_set_flags):
	fixed the check for only allowing priority flags to be set or
	unset.
	
	* libtinymail-tests/tny-header-test.c: added unit test for
	priority flags in camel msg header.

2007-06-19  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-folder.c: