@@ -1,3 +1,7 @@
+2007-06-25  Philip Van Hoof  <pvanhoof@gnome.org>
+	
+	* Deleting messages from local folders (bugfix about ghost rows)
+
 2007-06-24  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Bugfix in the folder factory
